<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"

    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="75dp"
        android:background="@color/purple_700"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/info_back"
            android:layout_width="61dp"
            android:layout_height="24dp"
            android:layout_marginTop="20dp"
            android:layout_weight="1"
            app:srcCompat="@drawable/strel_back" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="332dp"
            android:layout_height="90dp"
            android:gravity="center"
            android:paddingBottom="20dp"
            android:text="@string/Info_name"
            android:textSize="28sp"
            android:textStyle="bold" />
    </LinearLayout>

    <ScrollView
        android:id="@+id/scroll"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="75dp"
        android:layout_marginRight="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"

            android:orientation="vertical">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="match_parent"
                android:layout_height="283dp"
                app:srcCompat="@drawable/covid" />

            <TextView
                android:id="@+id/textView6"
                android:gravity="left"
                android:layout_width="match_parent"
                android:layout_height="38dp"
                android:text="@string/Obz_sved"
                android:textSize="26sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView7"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="12dp"
                android:gravity="left"
                android:text="@string/info_obz"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/textView9"
                android:layout_width="match_parent"
                android:layout_height="38dp"
                android:gravity="left"
                android:text="@string/Way"
                android:textSize="26sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView8"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="10dp"
                android:gravity="left"
                android:text="@string/Simp"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/textView10"
                android:gravity="left"
                android:layout_width="match_parent"
                android:layout_height="38dp"
                android:text="@string/Simpom"
                android:textSize="26sp"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/textView11"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="4dp"
                android:gravity="left"
                android:text="@string/Simpom2"
                android:textSize="18sp" />

            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="match_parent"
                android:layout_height="283dp"
                app:srcCompat="@drawable/per" />


        </LinearLayout>

    </ScrollView>


</RelativeLayout>