<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/up"
            android:minHeight="?attr/actionBarSize"
            android:theme="?attr/actionBarTheme" />

        <TextView
            android:id="@+id/TitleApp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:gravity="center_horizontal"
            android:text="@string/app_name"
            android:textColor="@color/white"
            android:textSize="25sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="@+id/toolbar2"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageButton
            android:id="@+id/Settings_Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:srcCompat="@android:drawable/ic_menu_manage" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/Title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/StatTitle"
        android:textColor="@color/black"
        android:textSize="25sp"
        android:textStyle="bold" />

    <Spinner
        android:id="@+id/spinner"
        android:layout_width="200dp"
        android:layout_height="80dp"
        android:layout_gravity="center"
        android:backgroundTint="@color/purple_200" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/NumbConf"
            android:layout_width="match_parent"
            android:layout_height="25dp"
            android:layout_weight="1"
            android:text=""
            android:textStyle="bold"
            android:textColor="@color/black"
            android:textSize="15sp"
            android:gravity="center_horizontal"/>

        <TextView
            android:id="@+id/NumbRecov"
            android:layout_width="match_parent"
            android:layout_height="25dp"
            android:layout_weight="1"
            android:text=""
            android:textStyle="bold"
            android:textColor="@color/Green"
            android:textSize="15sp"
            android:gravity="center_horizontal"/>

        <TextView
            android:id="@+id/NumbDeath"
            android:layout_width="match_parent"
            android:layout_height="25dp"
            android:layout_weight="1"
            android:text=""
            android:textStyle="bold"
            android:textColor="@color/Red"
            android:textSize="15sp"
            android:gravity="center_horizontal"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/TitleConf"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:layout_weight="1"
            android:textStyle="bold"
            android:text="@string/ConfTitle"
            android:textColor="@color/black"
            android:textSize="13sp"
            android:gravity="center_horizontal"/>

        <TextView
            android:id="@+id/TitleRecov"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:layout_weight="1"
            android:textStyle="bold"
            android:text="@string/RecovTitle"
            android:textColor="@color/black"
            android:textSize="13sp"
            android:gravity="center_horizontal"/>

        <TextView
            android:id="@+id/TitleDeath"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:layout_weight="1"
            android:textStyle="bold"
            android:text="@string/DeathTitle"
            android:textColor="@color/black"
            android:textSize="13sp"
            android:gravity="center_horizontal"/>
    </LinearLayout>
    <TextView
        android:id="@+id/Title2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/StatTitle2"
        android:textColor="@color/black"
        android:textSize="25sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/Date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:text="@string/date"
        android:textColor="@color/black"
        android:textSize="13sp"
        android:gravity="center_horizontal"/>

    <com.jjoe64.graphview.GraphView
        android:id="@+id/graphView"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        />

    <Button
        android:id="@+id/onfoBut"
        android:layout_width="match_parent"
        android:text="@string/InfoBut"

        android:layout_height="65dp" />
    <Button
        android:id="@+id/TestBut"
        android:layout_width="match_parent"
        android:text="@string/TestBut"
        android:layout_height="65dp"
         />

</LinearLayout>