<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">


    <LinearLayout
        android:id="@+id/common"
        android:layout_width="match_parent"
        android:layout_height="314dp"
        android:gravity="center"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:layout_marginBottom="10dp"
            android:background="@color/up"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/back_set"
                android:layout_width="50dp"
                android:layout_height="39dp"
                android:layout_marginTop="8dp"
                android:layout_weight="1"
                app:srcCompat="@drawable/abc_vector_test" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="352dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/Settings"
                android:textColor="@color/white"
                android:textSize="30sp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/Language"
            android:layout_width="match_parent"
            android:layout_height="74dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:background="@color/grey_W"
            android:orientation="horizontal"

            android:paddingTop="5dp">

            <TextView
                android:id="@+id/textView1"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:paddingLeft="7dp"
                android:text="@string/Language"
                android:textColor="@color/grey_B"
                android:textSize="30dp" />

            <Button
                android:id="@+id/button3"
                android:layout_width="wrap_content"
                android:layout_height="28dp"
                android:layout_weight="1"
                android:visibility="invisible"
                tools:visibility="invisible" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/rus"
                android:layout_width="110dp"
                android:layout_height="40dp"
                android:layout_marginHorizontal="7dp"
                android:layout_marginLeft="2dp"
                android:layout_weight="1"
                android:background="@drawable/btn_rus"
                android:text="@string/RUS"
                android:textColor="@color/white" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/en"
                android:layout_width="110dp"
                android:layout_height="40dp"
                android:layout_marginHorizontal="7dp"
                android:layout_marginLeft="2dp"
                android:layout_weight="1"
                android:background="@drawable/btn_rus"
                android:text="@string/EN"
                android:textColor="@color/white" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/About_app"
            android:layout_width="match_parent"
            android:layout_height="74dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:background="@color/grey_W">

            <TextView
                android:id="@+id/textView2"

                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="15dp"
                android:layout_weight="10"
                android:paddingLeft="7dp"
                android:text="@string/About_app"
                android:textColor="@color/grey_B"
                android:textSize="30dp" />

            <ImageView
                android:id="@+id/about_ap"
                android:layout_width="67dp"
                android:layout_height="wrap_content"
                android:layout_weight="10"
                app:srcCompat="@drawable/strel" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/FeedBack"
            android:layout_width="411dp"
            android:layout_height="74dp"
            android:layout_marginHorizontal="5dp"
            android:layout_marginTop="5dp"
            android:background="@color/grey_W">

            <TextView
                android:id="@+id/textView"

                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="15dp"
                android:layout_weight="10"
                android:paddingLeft="7dp"
                android:text="@string/Feedback"
                android:textColor="@color/grey_B"
                android:textSize="30dp" />

            <ImageView
                android:id="@+id/Feed_back"
                android:layout_width="67dp"
                android:layout_height="wrap_content"
                android:layout_weight="10"
                app:srcCompat="@drawable/strel" />

        </LinearLayout>


    </LinearLayout>
</RelativeLayout>